--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,5 @@
 PORT=4002
 MONGODB_PASSWORD = TB8SaLKlnaQKOtNo
 MONGODB_URI=mongodb+srv://adityabhawsar21:TB8SaLKlnaQKOtNo@cluster0.kyvtn.mongodb.net/ChatApp?retryWrites=true&w=majority&appName=Cluster0
-JWT_TOKEN=0hTa4U+5hJkjUektQIwImgAULcz7FQe1APCxaRyicz8=
+JWT_TOKEN="secret"
+NODE_ENV = "production"
