--- a/Backend/Frontend/package.json
+++ b/Backend/Frontend/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "axios": "^1.6.8",
+        "backend": "file:..",
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
         "js-cookie": "^3.0.5",
