--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev":"nodemon index.js",
+    "dev":"node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "build" : "npm install && npm install --prefix Frontend && npm run build --prefix Frontend"
   },
   "keywords": [
